--- a/spring-ws-server/pom.xml
+++ b/spring-ws-server/pom.xml
@@ -81,6 +81,10 @@
 			<artifactId>spring-rabbit</artifactId>
 			<version>2.4.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-json</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
